2009-01-19  Michael Wiegand <michael.wiegand@intevation.de>

	* Makefile: Fixed permissions for openvas/gnupg directory.

2009-01-16  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Cosmetics (reformatted ntp_11_recv_file, docs).
	
	* openvasd/ntp_11.c (ntp_11_recv_file): Reformatted.
	
	* openvasd/ntp_11.c: Tiny doc improvements.
	
2009-01-15  Michael Wiegand <michael.wiegand@intevation.de>

	* openvasd-config.in: Added support for retrieving the sysconfdir and
	libdir of an OpenVAS installation.

2009-01-12  Jan-Oliver Wagner <jan-oliver.wagner@intevation.de>

	* openvasd/openvasd.c (main): Removed exit-upon-nonroot,
	because there is no reason why only root should start
	the server. It works well except for those
	operation where root privileges are needed.
	In cases where privileges are not sufficient, the
	log file will contain respective notes.

	* openvas-mkcert.in, openvas-adduser.in: Don't have
	it mandatory to be root.

2009-01-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Cosmetics (reformatted ntp_11_recv_file, docs).
	
	* openvasd/ntp_11.c (ntp_11_recv_file): Reformatted.
	
	* openvasd/ntp_11.c: Reformatted.

2009-01-12  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Refactoring attack method.

	* openvasd/attack.c (launch_plugin): Changed int to gboolean parameter,
	doc.
	
	* openvasd/attack.c (init_host_kb): New method, extracted from
	attack_host, comments, documentation.
	
	* openvasd/attack.c (attack_host): Changed new_kb to be gboolean,
	extracted init_host_kb function.

2009-01-07  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/attack.c (attack_host): Removed local unused variable
	kb_restored.

2009-01-07  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* openvasd/attack.c (attack_host, attack_start): Reformatted.
	
	* openvasd/attack.c (attack_network): Remoded local unused variable
	return_code, added comment.

2009-01-07  Felix Wolfsteller <felix.wolfsteller@intevation.de>
