@@ -1,5 +1,10 @@
 2009-01-19  Michael Wiegand <michael.wiegand@intevation.de>
 
+	* openvasd-config.in: Added support for retrieving the sbindir of an
+	OpenVAS installation.
+
+2009-01-19  Michael Wiegand <michael.wiegand@intevation.de>
+
 	* Makefile: Fixed permissions for openvas/gnupg directory.
 
 2009-01-16  Felix Wolfsteller <felix.wolfsteller@intevation.de>
